sql area needs white-space nowrap to prevent sql from moving down a line on small screens [fixes #24938525]

--- a/scss/datasets/_dataset_content_details.scss
+++ b/scss/datasets/_dataset_content_details.scss
@@ -54,6 +54,7 @@
         .sql {
             @include font-normal-alpha;
             margin-left: 10px;
+            white-space: nowrap;
             vertical-align: middle;
             display: inline-block;
             width: 50%;
